--- a/src/pages/homepage/home.module.css
+++ b/src/pages/homepage/home.module.css
@@ -6,7 +6,7 @@
     transform: translate(-50%, -50%);
     border: 1px solid #444444;
     border-radius: 10px;
-    padding: 32px 24px;
+    padding: 15px;
     background: #242424;
     display: flex;
     flex-direction: column;
